--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -18,9 +18,9 @@ input,textarea {
 
 form input[type=submit] {
     cursor: pointer; 
-	background : url("/static/submit.png") no-repeat center center;
-	width : 91px;
-	height :91px;
+	background : url("/static/icon4.png") no-repeat center center;
+	width : 88px;
+	height :88px;
 	border : none;
 	color : transparent;
 }
