--- a/webapp/templates/thank-you.html
+++ b/webapp/templates/thank-you.html
@@ -1,9 +1,5 @@
-{% extends 'base.html' %}
-
-{% block title %}Thanks{% endblock %}
-
-{% block content %}
-    <h1>Thanks for signing up!</h1>
-	
-	{{ frase }}
-{% endblock %}
+<h1>{{ name }} Here's your picture only 5 €:!</h1>
+<br/>	
+<center>
+<img src="/static/style_transfer_result_at_iteration_0.png">
+</center>
