--- a/webapp/templates/process.html
+++ b/webapp/templates/process.html
@@ -9,8 +9,9 @@
 	{{ name }}
 	<br/>
 	{{ phrase }}
+	<img src="static/frame2.png" width="{{ imgKand_width2 }}px"  height="{{ imgKand_ht2 }}px">
+	<img src="static/style_transfer_result_at_iteration_0.png"  width="{{ imgKand_width }}px" height="{{ imgKand_ht }}px" style="top:-10px;left:-{{ imgKand_width }}px">
 	
-	<img src="style_transfer_result_at_iteration_0.png">
 	
 	{{ result }}
 {% endblock %}
