--- a/webapp/templates/thank-you.html
+++ b/webapp/templates/thank-you.html
@@ -1,5 +1,25 @@
-<h1>{{ name }} Here's your picture only 5 €:!</h1>
-<br/>	
-<center>
-<img src="/static/style_transfer_result_at_iteration_0.png">
-</center>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Thanks</title>
+</head>
+<body>
+    
+    
+    <h1>Thanks for signing up!</h1>
+	
+
+	Andrea
+	<br/>
+	I have rage
+	<div>
+	<img src="static/frame2.png" width="385px"  height="230px">
+	</div>
+	<div style="position:relative;top:-215px;left:15px">
+	<img src="static/style_transfer_result_at_iteration_0.png"  width="355px" height="200px">
+	</div>
+		
+	
+
+</body>
+</html>
